; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_handshake_helper.c_client_hello_reject_cb.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_handshake_helper.c_client_hello_reject_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SSL_AD_UNRECOGNIZED_NAME = common dso_local global i32 0, align 4
@SSL_CLIENT_HELLO_ERROR = common dso_local global i32 0, align 4
@SSL_CLIENT_HELLO_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i8*)* @client_hello_reject_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @client_hello_reject_cb(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i8*, i8** %7, align 8
  %10 = call i32 @client_hello_select_server_ctx(i32* %8, i8* %9, i32 0)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %16, label %12

12:                                               ; preds = %3
  %13 = load i32, i32* @SSL_AD_UNRECOGNIZED_NAME, align 4
  %14 = load i32*, i32** %6, align 8
  store i32 %13, i32* %14, align 4
  %15 = load i32, i32* @SSL_CLIENT_HELLO_ERROR, align 4
  store i32 %15, i32* %4, align 4
  br label %18

16:                                               ; preds = %3
  %17 = load i32, i32* @SSL_CLIENT_HELLO_SUCCESS, align 4
  store i32 %17, i32* %4, align 4
  br label %18

18:                                               ; preds = %16, %12
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

declare dso_local i32 @client_hello_select_server_ctx(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
